[package]
name = "nature_common"
version = "0.0.1"
authors = ["xuebin.Li <llxxbb@yeah.net>"]
edition = "2018"
workspace = "../Nature"

description = "Common defines which used by Nature"
repository = "https://github.com/llxxbb/Nature-Common"
license = "MIT"


[dependencies]

serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
itertools = "0.8"
actix = "0.7"

chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "0.7", features = ["v3"] }


# log
log = "0.4.1"
fern = "0.5"        # Simple, efficient logging


